# ankimdown

./: '  Cargo.toml  ]
.github/workflows/: ci.yml
examples/markdown_database/foo/: sample_database.md
examples/markdown_databse/: deck.md
examples/markdown_databse/foo/: sample_database.md
src/: information.rs  lib.rs  main.rs
src/ankigen/: deck.rs  information.rs  mod.rs  util.rs
src/ankigen/db_model/: deck.rs  model.rs  note.rs
src/db_model/: card.rs  collection.rs  mod.rs  table.rs
src/markdown/: ast.rs  deck_parser.rs  heading.rs  information_parser.rs  mod.rs  text.rs  util.rs
src/markdown/ast/: node.rs
tests/: mod.rs
tests/ankigen/db_model/: model.rs
tests/db_model/: card.rs  collection.rs  deck.rs  mod.rs  model.rs
