[package]
name = "ankimdown"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
pulldown-cmark = { version = "0.13.0", features = ["serde"] }
rusqlite = { version = "0.36.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
sha2 = "0.10.9"
tempfile = "3.20.0"

[package.metadata.docs.rs]
features = ["all"]
